fix problem in image import

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     seriously important.</h4>
             </div>
             <!-- <div class="image"> -->
-            <img class="image" src="../media/shreemaan-abhishek.png" alt="">
+            <img class="image" src="./media/shreemaan-abhishek.png" alt="">
             <!-- </div> -->
         </div>
     </div>
