add header and refactor style

--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
+        <div class="header">
+            <h1 class="color-yellow header-text">Shreemaan Abhishek</h1>
+        </div>
         <div class="main">
-            <div class="header">
-                <h1 class="header-text color-yellow">Shreemaan</h1>
-                <h1 class="header-text color-yellow">Abhishek</h1>
-                <h4 class="header-desc color-yellow">A geek, an ambivert and a workaholic person who thinks sarcasm is
+            <div class="tagline-container">
+                <!-- <h1 class="header-text color-yellow">Shreemaan</h1>
+                <h1 class="header-text color-yellow">Abhishek</h1> -->
+                <h4 class="tagline color-yellow">A geek, an ambivert and a workaholic person who thinks sarcasm is
                     seriously important.</h4>
             </div>
             <!-- <div class="image"> -->
