--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <h1 class="header-text color-yellow">Abhishek</h1> -->
                 <h4 class="tagline color-yellow">A geek, an ambivert and a workaholic person who thinks sarcasm is
                     seriously important.</h4>
+                <p class="color-yellow sub-tagline">
+                    Pssst I'm a skilled Android Developer (with over 1 year experience) exploring other fields in tech.
+                    You can learn more about me here. 
+                </p>
             </div>
             <!-- <div class="image"> -->
             <img class="image" src="./media/shreemaan-abhishek.png" alt="">
