make naming refactors, add few css rules

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="header">
-            <h1 class="color-yellow header-text">Shreemaan Abhishek</h1>
+    <div class="dark-container">
+        <div class="navbar">
+            <h1 class="text-yellow navbar-text">Shreemaan Abhishek</h1>
         </div>
         <div class="main">
             <div class="tagline-container">
-                <!-- <h1 class="header-text color-yellow">Shreemaan</h1>
-                <h1 class="header-text color-yellow">Abhishek</h1> -->
-                <h4 class="tagline color-yellow">A geek, an ambivert and a workaholic person who thinks sarcasm is
+                <!-- <h1 class="header-text text-yellow">Shreemaan</h1>
+                <h1 class="header-text text-yellow">Abhishek</h1> -->
+                <h4 class="tagline text-yellow">A geek, an ambivert and a workaholic person who thinks sarcasm is
                     seriously important.</h4>
-                <p class="color-yellow sub-tagline">
+                <p class="text-yellow sub-tagline">
                     Pssst I'm a skilled Android Developer (with over 1 year experience) exploring other fields in tech.
                     You can learn more about me here. 
                 </p>
