--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
             below.
         </p>
         <div class="contacts">
-            <a href="linkedin.com/in/shreemaan-abhishek"> 
+            <a href="https://linkedin.com/in/shreemaan-abhishek"> 
                 <img class="contact" src="./media/linkedin.svg" alt="">
             </a>
-            <a href="twitter.com/shreemaan_abhi"> 
+            <a href="https://twitter.com/shreemaan_abhi"> 
                 <img class="contact" src="./media/twitter.svg" alt="">
             </a>
             <a href="mailto:shreemaan.abhishek@gmail.com"> 
