Add canvas element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shreemaan-abhishek</title>
     <link rel="stylesheet" href="./styles.css">
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap" rel="stylesheet">
@@ -18,10 +18,11 @@
 </head>
 
 <body>
-    <div class="dark-container">
-        <div class="navbar">
-            <h1 class="text-yello navbar-text" style="color: #d8c412;">Shreemaan Abhishek</h1>
-        </div>
+    <div class="navbar">
+        <h1 class="text-yello navbar-text" style="color: #d8c412;">Shreemaan Abhishek</h1>
+    </div>
+    <div class="dark-container" id="particles-js">
+
         <div class="top">
             <div class="tagline-container">
                 <!-- <h1 class="header-text text-yellow">Shreemaan</h1>
@@ -145,18 +146,20 @@
             below.
         </p>
         <div class="contacts">
-            <a href="https://linkedin.com/in/shreemaan-abhishek"> 
+            <a href="https://linkedin.com/in/shreemaan-abhishek">
                 <img class="contact" src="./media/linkedin.svg" alt="">
             </a>
-            <a href="https://twitter.com/shreemaan_abhi"> 
+            <a href="https://twitter.com/shreemaan_abhi">
                 <img class="contact" src="./media/twitter.svg" alt="">
             </a>
-            <a href="mailto:shreemaan.abhishek@gmail.com"> 
+            <a href="mailto:shreemaan.abhishek@gmail.com">
                 <img class="contact" src="./media/email.svg" alt="">
             </a>
         </div>
         <p class="footer-text">P.S: My music taste is better than yours.</p>
     </div>
+    <script src="./particles.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
