Replced:old img --> new with

--- a/index.html
+++ b/index.html
@@ -1,56 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shreemaan-abhishek</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png">
-    <link rel="manifest" href="/media/site.webmanifest">
-    <link rel="mask-icon" href="/media/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/media/favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="/media/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-</head>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/media/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/media/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/media/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/media/site.webmanifest" />
+    <link rel="mask-icon" href="/media/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="shortcut icon" href="/media/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="msapplication-config" content="/media/browserconfig.xml" />
+    <meta name="theme-color" content="#ffffff" />
+  </head>
 
-<body>
+  <body>
     <div class="navbar">
-        <h1 class="text-yello navbar-text" style="color: #d8c412;">Shreemaan Abhishek</h1>
+      <h1 class="text-yello navbar-text" style="color: #d8c412">
+        Shreemaan Abhishek
+      </h1>
     </div>
     <div class="dark-container" id="particles-js">
-
-        <div class="top">
-            <div class="tagline-container">
-                <!-- <h1 class="header-text text-yellow">Shreemaan</h1>
+      <div class="top">
+        <div class="tagline-container">
+          <!-- <h1 class="header-text text-yellow">Shreemaan</h1>
                 <h1 class="header-text text-yellow">Abhishek</h1> -->
-                <h4 class="tagline text-yellow">A geek, an ambivert and a workaholic person who thinks sarcasm is
-                    seriously important.</h4>
-                <p class="text-yellow sub-tagline">
-                    Pssst I'm a skilled Android Developer (with over 1 year experience) exploring other fields in tech.
-                    You can learn more about me here.
-                </p>
-            </div>
-            <!-- <div class="image"> -->
-            <img class="image" src="./media/shreemaan-abhishek.png" alt="">
-            <!-- </div> -->
+          <h4 class="tagline text-yellow">
+            A geek, an ambivert and a workaholic person who thinks sarcasm is
+            seriously important.
+          </h4>
+          <p class="text-yellow sub-tagline">
+            Pssst I'm a skilled Android Developer (with over 1 year experience)
+            exploring other fields in tech. You can learn more about me here.
+          </p>
         </div>
+        <!-- <div class="image"> -->
+        <img class="image" src="./media/abhi.png" alt="" />
+        <!-- </div> -->
+      </div>
     </div>
     <div class="yellow-container">
-        <!-- <h1 class="text-dark headline">My journey</h1>
+      <!-- <h1 class="text-dark headline">My journey</h1>
         <p>I wrote my very first line of code in November 2019, when I was learning Java. I covered the basics and then
             took a break due to exams. I continued where I left off from January 2020 and then started learning Android
             Development. I made a few small projects and then I started working on my major project
@@ -66,110 +91,153 @@
             This is where I realise the turning point in my career is. To be continued...
         </p> -->
 
-        <h1 class="text-dark headline">Projects</h1>
-        <div class="projects">
-            <div class="project">
-                <h3 class="text-dark subheadline">Draw Easy</h3>
-                <p>
-                    Draw Easy is an Android app that helps an individual to draw/sketch somthing. It digitises the grid
-                    method
-                    of Drawing
-                    by printing grids over the reference image so that the user can draw the picture following each
-                    grid. This
-                    app on
-                    playstore has over <strong>50K</strong> downloads
-                </p>
-                <a href="https://play.google.com/store/apps/details?id=com.dopedevx.draweasy"><img class="play"
-                        src="./media/play.svg" alt=""></a>
-                <a href="https://youtu.be/DOOApZoZzFY"><img class="yt " src="./media/yt.svg" alt=""></a>
-            </div>
-
-            <div class="project">
-                <h3 class="text-dark subheadline">MAD Dictionary</h3>
-                <p>
-                    Is this dictionary mad? Well yes, but actually no. MAD = Modern Android Development, this app is
-                    built using
-                    the very new and very awesome frameworks in the Android SDK like Coroutine, View/DataBinding, MVVM
-                    architecture,
-                    RecyclerView etc.
-                </p>
-                <a href="https://github.com/shreemaan-abhishek/MAD-Dictionary"><img class="github svg"
-                        src="./media/github.svg" alt=""></a>
-            </div>
-            <div class="project">
-                <h3 class="text-dark subheadline">Congrats Shower</h3>
-                <p>
-                    An Android library governed by Jitpack Package manager which can be used to perform Confetti Shower
-                    animation.
-                </p>
-                <a href="https://github.com/shreemaan-abhishek/congratsshower"><img class="github svg"
-                        src="./media/github.svg" alt=""></a>
-            </div>
-            <div class="project">
-                <h3 class="text-dark subheadline">60 Days Of DSA Bot</h3>
-                <p>
-                    Twitter bot built using TwitterAPI and Node.js along with a <a
-                        href="https://github.com/FeedHive/twitter-api-client/">
-                        API Client</a>. That retweets tweets with #60DaysOfDSA and #DSAWithKunal
-                </p>
-                <a href="https://github.com/shreemaan-abhishek/60-days-of-dsa-bot"><img class="github svg"
-                        src="./media/github.svg" alt=""></a>
-            </div>
+      <h1 class="text-dark headline">Projects</h1>
+      <div class="projects">
+        <div class="project">
+          <h3 class="text-dark subheadline">Draw Easy</h3>
+          <p>
+            Draw Easy is an Android app that helps an individual to draw/sketch
+            somthing. It digitises the grid method of Drawing by printing grids
+            over the reference image so that the user can draw the picture
+            following each grid. This app on playstore has over
+            <strong>50K</strong> downloads
+          </p>
+          <a
+            href="https://play.google.com/store/apps/details?id=com.dopedevx.draweasy"
+            ><img class="play" src="./media/play.svg" alt=""
+          /></a>
+          <a href="https://youtu.be/DOOApZoZzFY"
+            ><img class="yt" src="./media/yt.svg" alt=""
+          /></a>
         </div>
-        <h1 class="headline">Tech Stack</h1>
-        <div class="container">
-            <h3 class="subheadline">Languages:</h3>
-            <img src="https://img.shields.io/badge/-java-ee2737?style=for-the-badge&logo=java&logoColor=white" alt="">
-            <img src="https://img.shields.io/badge/-kotlin-766DB2?style=for-the-badge&logo=kotlin&logoColor=violet"
-                alt="">
-            <img src="https://img.shields.io/badge/-JavaScript-422057?style=for-the-badge&logo=javascript" alt="">
-            <img src="https://img.shields.io/badge/-C/C++-00599C?style=for-the-badge&logo=c" alt="">
-            <img src="https://img.shields.io/badge/-HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="">
-            <img src="https://img.shields.io/badge/-CSS3-1572B6?style=for-the-badge&logo=css3" alt="">
 
-            <h3 class="subheadline">Database:</h3>
-            <img src="https://img.shields.io/badge/-MongoDB-97bc62?style=for-the-badge&logo=mongodb" alt="">
-            <img src="https://img.shields.io/badge/-SQLite-d7a9e3?style=for-the-badge&logo=sqlite&logoColor=black"
-                alt="">
-
-            <h3 class="subheadline">Libs/Frameworks:</h3>
-            <img src="https://img.shields.io/badge/-Android-white?style=for-the-badge&logo=android" alt="">
-            <img src="https://img.shields.io/badge/-React-078282?style=for-the-badge&logo=react" alt="">
-            <img src="https://img.shields.io/badge/-Bootstrap-cbce91?style=for-the-badge&logo=bootstrap" alt="">
-            <img src="https://img.shields.io/badge/-Nodejs-ffe77a?style=for-the-badge&logo=Node.js" alt="">
-            <img src="https://img.shields.io/badge/-ExpressJs-red?style=for-the-badge&logo=Express" alt="">
+        <div class="project">
+          <h3 class="text-dark subheadline">MAD Dictionary</h3>
+          <p>
+            Is this dictionary mad? Well yes, but actually no. MAD = Modern
+            Android Development, this app is built using the very new and very
+            awesome frameworks in the Android SDK like Coroutine,
+            View/DataBinding, MVVM architecture, RecyclerView etc.
+          </p>
+          <a href="https://github.com/shreemaan-abhishek/MAD-Dictionary"
+            ><img class="github svg" src="./media/github.svg" alt=""
+          /></a>
         </div>
+        <div class="project">
+          <h3 class="text-dark subheadline">Congrats Shower</h3>
+          <p>
+            An Android library governed by Jitpack Package manager which can be
+            used to perform Confetti Shower animation.
+          </p>
+          <a href="https://github.com/shreemaan-abhishek/congratsshower"
+            ><img class="github svg" src="./media/github.svg" alt=""
+          /></a>
+        </div>
+        <div class="project">
+          <h3 class="text-dark subheadline">60 Days Of DSA Bot</h3>
+          <p>
+            Twitter bot built using TwitterAPI and Node.js along with a
+            <a href="https://github.com/FeedHive/twitter-api-client/">
+              API Client</a
+            >. That retweets tweets with #60DaysOfDSA and #DSAWithKunal
+          </p>
+          <a href="https://github.com/shreemaan-abhishek/60-days-of-dsa-bot"
+            ><img class="github svg" src="./media/github.svg" alt=""
+          /></a>
+        </div>
+      </div>
+      <h1 class="headline">Tech Stack</h1>
+      <div class="container">
+        <h3 class="subheadline">Languages:</h3>
+        <img
+          src="https://img.shields.io/badge/-java-ee2737?style=for-the-badge&logo=java&logoColor=white"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-kotlin-766DB2?style=for-the-badge&logo=kotlin&logoColor=violet"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-JavaScript-422057?style=for-the-badge&logo=javascript"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-C/C++-00599C?style=for-the-badge&logo=c"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-CSS3-1572B6?style=for-the-badge&logo=css3"
+          alt=""
+        />
+
+        <h3 class="subheadline">Database:</h3>
+        <img
+          src="https://img.shields.io/badge/-MongoDB-97bc62?style=for-the-badge&logo=mongodb"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-SQLite-d7a9e3?style=for-the-badge&logo=sqlite&logoColor=black"
+          alt=""
+        />
+
+        <h3 class="subheadline">Libs/Frameworks:</h3>
+        <img
+          src="https://img.shields.io/badge/-Android-white?style=for-the-badge&logo=android"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-React-078282?style=for-the-badge&logo=react"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-Bootstrap-cbce91?style=for-the-badge&logo=bootstrap"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-Nodejs-ffe77a?style=for-the-badge&logo=Node.js"
+          alt=""
+        />
+        <img
+          src="https://img.shields.io/badge/-ExpressJs-red?style=for-the-badge&logo=Express"
+          alt=""
+        />
+      </div>
     </div>
     <div class="dark-container centered bottom">
-        <h1 class="centered-headline">About me</h1>
-        <p class="text-yellow">
-            I'm a passionate coder who loves building cool stuff.
-            I have been programming since January 2020 and I have spent a big chunk of that time building Android apps.
-            And lately, I have started gaining interest on Web and the Cloud.
-            <br><br>
-            When I'm not coding, you can find me hanging out on <a href="discord.eddiehub.org">EddieHub</a>, watching
-            cricket, watching comedy videos on YouTube or listening to Rock music (I do that while coding as well :P).
-            In fact, <a href="https://www.youtube.com/watch?v=YFvW9hGUe9s">here's</a> one of my favorite songs.
-            <br><br>
-            You think you have better music taste than mine? Let's talk about it then! You can reach me out from the
-            links
-            below.
-        </p>
-        <div class="contacts">
-            <a href="https://linkedin.com/in/shreemaan-abhishek">
-                <img class="contact" src="./media/linkedin.svg" alt="">
-            </a>
-            <a href="https://twitter.com/shreemaan_abhi">
-                <img class="contact" src="./media/twitter.svg" alt="">
-            </a>
-            <a href="mailto:shreemaan.abhishek@gmail.com">
-                <img class="contact" src="./media/email.svg" alt="">
-            </a>
-        </div>
-        <p class="footer-text">P.S: My music taste is better than yours.</p>
+      <h1 class="centered-headline">About me</h1>
+      <p class="text-yellow">
+        I'm a passionate coder who loves building cool stuff. I have been
+        programming since January 2020 and I have spent a big chunk of that time
+        building Android apps. And lately, I have started gaining interest on
+        Web and the Cloud.
+        <br /><br />
+        When I'm not coding, you can find me hanging out on
+        <a href="discord.eddiehub.org">EddieHub</a>, watching cricket, watching
+        comedy videos on YouTube or listening to Rock music (I do that while
+        coding as well :P). In fact,
+        <a href="https://www.youtube.com/watch?v=YFvW9hGUe9s">here's</a> one of
+        my favorite songs. <br /><br />
+        You think you have better music taste than mine? Let's talk about it
+        then! You can reach me out from the links below.
+      </p>
+      <div class="contacts">
+        <a href="https://linkedin.com/in/shreemaan-abhishek">
+          <img class="contact" src="./media/linkedin.svg" alt="" />
+        </a>
+        <a href="https://twitter.com/shreemaan_abhi">
+          <img class="contact" src="./media/twitter.svg" alt="" />
+        </a>
+        <a href="mailto:shreemaan.abhishek@gmail.com">
+          <img class="contact" src="./media/email.svg" alt="" />
+        </a>
+      </div>
+      <p class="footer-text">P.S: My music taste is better than yours.</p>
     </div>
     <script src="./particles.js"></script>
     <script src="./app.js"></script>
-</body>
-
+  </body>
 </html>
